Bug 396036 - Initial directory option not working with zsh
Summary: Initial directory option not working with zsh
Status: RESOLVED FIXED
Alias: None
Product: yakuake
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.0.5
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-01 04:21 UTC by Miguel Rivas
Modified: 2019-04-26 15:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
yakuake profile settings (43.55 KB, image/png)
2018-07-01 04:21 UTC, Miguel Rivas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miguel Rivas 2018-07-01 04:21:43 UTC
Created attachment 113663 [details]
yakuake profile settings

I've setup yakuake to use /bin/zsh as "Command" and /home/<username>/Documents/Workspace as "Initial Directory" but when yakuake is opened I'm at ~ (home).
Comment 1 Maximilian Schiller 2019-04-26 15:46:25 UTC
Git commit 8f9844b8dbb44334dd54b64dcc0815cefb404151 by Maximilian Schiller.
Committed on 26/04/2019 at 15:46.
Pushed by mschiller into branch 'master'.

Remove forcing the initial dir to QDir::homePath()

Summary:
This removes setting the current working dir to the home directory.
Without this patch the KPart's initial directory setting has no effect.
Also the KPart already defaults back to the home directory if nothing has been set.

Test Plan:
1. Edit Current profile
2. change initial directory to something other than ~
3. restart yakuake / open new tab
4. The shells working dir should be equal to as specified in step 2

Reviewers: hein, #kde_applications

Reviewed By: hein

Differential Revision: https://phabricator.kde.org/D20117

M  +0    -2    app/terminal.cpp

https://commits.kde.org/yakuake/8f9844b8dbb44334dd54b64dcc0815cefb404151