Remove forcing the initial dir to QDir::homePath()

Summary:
This removes setting the current working dir to the home directory.
Without this patch the KPart's initial directory setting has no effect.
Also the KPart already defaults back to the home directory if nothing has been set.

BUG: 396036

Test Plan:
1. Edit Current profile
2. change initial directory to something other than ~
3. restart yakuake / open new tab
4. The shells working dir should be equal to as specified in step 2

Reviewers: hein, #kde_applications

Reviewed By: hein

Differential Revision: https://phabricator.kde.org/D20117