app/terminal.cpp
@@ -32,7 +32,6 @@
 
 #include <QAction>
 #include <QApplication>
-#include <QDir>
 #include <QHBoxLayout>
 #include <QLabel>
 #include <QWidget>
@@ -86,7 +85,6 @@ Terminal::Terminal(QWidget* parent) : QObject(parent)
         disableOffendingPartActions();
 
         m_terminalInterface = qobject_cast<TerminalInterface*>(m_part);
-        if (m_terminalInterface) m_terminalInterface->showShellInDir(QDir::homePath());
     }
     else
         displayKPartLoadError();
